--- a/css/temas.css
+++ b/css/temas.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100&display=swap');
-
+/**/
 body {
     padding: 0;
     margin: 0;
